--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
 body {
-  background-color: #282c34;
+  background-color: #121212;
+  font-family: "Open Sans", sans-serif;
 }
 
 .App {
@@ -7,10 +10,21 @@ body {
 }
 
 .App p {
-  color: white;
+  color: #ffffff;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.settings {
+  width: 25px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.settings:hover {
+  cursor: pointer;
 }
