--- a/src/components/form/AddUnit.css
+++ b/src/components/form/AddUnit.css
@@ -1,5 +1,6 @@
 .unitImage {
   width: 150px;
+  margin: 1em;
 }
 
 .customUnit__form {
@@ -18,7 +19,8 @@
 }
 
 .add__entry {
-  width: 65px;
+  width: 100px;
+  margin-top: 25px;
 }
 
 .add__entry:hover {
@@ -36,6 +38,10 @@
   justify-content: center;
   margin: 0 auto;
   max-width: 960px;
+  width: 400px;
+  border-radius: 5px;
+  margin-top: 15px;
+  background-color: #a597b4;
 }
 
 .customUnit__form input,
