--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 html {
   /* concrete */
   background-color: #F9F9F9; 
+  animation: animateBg 14s linear infinite;
+  background-image: linear-gradient(0deg, #ececec, #f2f2f2, #bbb4b4, #ffffff, #fff2f2);
+  background-size: 100% 400%;
+  background-repeat: no-repeat;
+  }
+
+@keyframes animateBg {
+  0% {
+    background-position: 15% 0%;
+  }
+
+  100% {
+    background-position: 0% 85%;
+  }
 }
 
 .profile__picture {
@@ -29,6 +43,7 @@ html {
   background: #2F5D8C;
   color: white;
   font-size: 50px;
+  border: 5px solid #D55E2D;
 }
 
 
