--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,9 @@ html {
   font-size: 50px;
   border: 2px solid black;
 }
+
+.hungary__flag {
+  margin-top: 20px;
+  max-width: 100%;
+  border: 2px solid black;
+}
